--- a/energyrestapi/src/main/resources/application.properties
+++ b/energyrestapi/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=energyrestapi
+spring.datasource.url=jdbc:postgresql://localhost:5432/energydb
+spring.datasource.username=postgres
+spring.datasource.password=secret
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
