--- a/energyproducer/pom.xml
+++ b/energyproducer/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.17.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
