--- a/energyuser/pom.xml
+++ b/energyuser/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.17.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.20.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
