--- a/currentpercentageservice/src/main/resources/application.yml
+++ b/currentpercentageservice/src/main/resources/application.yml
@@ -5,12 +5,11 @@ spring:
     password: disyspw
 
   flyway:
-    enabled: true
-    locations: classpath:db/migration
+    enabled: false
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
